--- a/Index/mainportsite.html
+++ b/Index/mainportsite.html
@@ -10,7 +10,7 @@
     <body>  
         <nav>
             <div class="logo">
-                <img src="#" alt="Logo Image">
+              <h1 class="logo">DB</h1>
             </div>
             <div class="hamburger">
                 <div class="line1"></div>
@@ -23,20 +23,20 @@
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><button class="login-button"><a href="login.html">Login</a></button></li>
-                <li><button class="join-button"><a href="signup.pug">Join</a></button></li>
             </ul>
         </nav>
         <div id="home" class="container-1">
-            <h1 class="center-txt">Hey, I'm Derek</h1>
-            <p class="lead-center-txt">Front-end & Back-end Programmer</p>
+          <div class="bg"></div>
+<div class="bg bg2"></div>
+<div class="bg bg3"></div>
+            <h1 class="center-main-txt">Derek Booton</h1>
+            <p class="lead-center-txt">Full-Stack Developer</p>
         </div>
         <div id="about" class="container-2">
             <h2 class="center-txt">About Me</h2>
-            <p class="about-center-txt">I've obtained my Associates degree in Web Design and Programming at IWCC Online. During that time I was enrolled in school I spent my free time in books and online continuing my education. I've worked on numerious projects independently, only so many deemed worthy to be put on here!</p>
+            <p class="about-center-txt">I am currently majoring in Programming and Web Design at IWCC. I am a father of 3 boys under the age of 8 and employed with a company that provides care and living assistance to those with mental illness. What freetime I have is spent continuing my education in books and on websites such as <i>Codecademy</i> and <i>FreeCodeCamp</i>. I've worked on numerious projects independently, I have also done some freelance work - this is available in Experience.</p>
         <div class="about-tools">
-            <p class="about-center-txt">Here's some tools and languages I've used: </p>
-            <code>HTML5, CSS3, Javascript, React, SASS, SQL, Github, Python, VScode</code>
+          <p class="about-center-txt">Here's some tools and languages I've used:<br/><strong>HTML5 - CSS/SASS - ReactJS - JS - C# - SQL | Visual Studio - Atom</strong></p>
         </div>
         </div>
         </div> 
@@ -54,12 +54,13 @@
             <h2 class="center-txt contact-header">Contact Me</h2>
             <p class="foot-center-txt">Find me on: </p>
             <ul class="centered">
-                <a href="https://codepen.io/dereka6797/"><li><i class="fa fa-codepen"></i> CodePen</li></a>
-                <a href="https://www.linkedin.com/in/derekbooton"><li><i class="fa fa-linkedin-square"></i> LinkedIn</li></a>
-                <a href="https://github.com/dereka6797"><li><i class="fa fa-github"></i> Github</li></a>
+                <a href="#"><li><i class="fa fa-codepen"></i> CodePen</li></a>
+                <a href="#"><li><i class="fa fa-linkedin-square"></i> LinkedIn</li></a>
+                <a href="#"><li><i class="fa fa-github"></i> Github</li></a>
+               <a href="#"><li><i class="fa fa-email"></i>Email</li></a>
             </ul>
-            <p class="foot-center-txt">Or shoot me an email <a href="#">here.</a></p>
-        </div>
+        
+            </ul>
           <footer class="footer">
             <div class="container">
                 
